# learningRust

./: Cargo.toml
src/: advent.rs  future.rs  main.rs  observable.rs  random.rs
src/advent/: day1.rs  day2.rs  day2_1.rs  day2_2.rs  day3.rs  day4.rs  day5.rs  day6.rs  file.rs  mod.rs
