[package]
name = "playground"
version = "0.1.0"
authors = ["Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.12.1"
chrono = "0.4.7"
linked-list = "0.0.3"
futures = "0.1"
parse_duration = "2.0.1"
time = "0.1.42"
sysinfo = "0.9.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
number_prefix = "0.3"
byte-unit = "3.0.3"

