[package]
name = "playground"
version = "0.1.0"
authors = ["Lee"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.12.1"
chrono = "0.4.7"
linked-list = "0.0.3"
futures = "0.1"
parse_duration = "2.0.1"
time = "0.1.42"
byte-unit = "3.0.3"
libc = "0.2"
uptime_lib = "0.1.0"

sysinfo = { git = "https://github.com/lfitchett/sysinfo.git" }
